[tool.poetry]
name = "dungeon-generator"
version = "0.1.0"
description = ""
authors = ["ratilmii <ratilmii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
pygame = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
